[package]
name = "glium-plasma"
version = "0.1.0"
authors = ["Björn Westlin <bwestlin at gmail dot com>"]

[dependencies]
glium_sdl2 = "0.8"
sdl2 = "0.9"
rand = "0.3.12"
time = "0.1"

[dependencies.glium]
version = "0.10"
# Remove any Glium features that you don't use
features = ["image", "nalgebra", "cgmath"]
default-features = false
